--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -104,21 +104,25 @@
   position: relative;
 }
 
-// .insp-img-wrapper {
-//   position: relative;
-//
-//   // .glyphicon-zoom-in {
-//   //     visibility: hidden;
-//   //     color: #F1F7F7;
-//   //     // font-size: 200%;
-//   //     position: absolute;
-//   //     top: 10%;
-//   //     left: 90%;
-//   // }
-// }
+#inspiration-image-title {
+  font-weight: bold;
+}
 
-// a.modal-insp:hover {
-//   .glyphicon-zoom-in {
-//       visibility: visible;
-//   }
-// }
+.insp-img-wrapper {
+  position: relative;
+
+  .glyphicon-zoom-in {
+      visibility: hidden;
+      color: #F1F7F7;
+      font-size: 150%;
+      position: absolute;
+      top: 35px;
+      left: 480px;
+  }
+}
+
+a.modal-insp:hover {
+  .glyphicon-zoom-in {
+      visibility: visible;
+  }
+}
