new toc for lessons

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -30,7 +30,10 @@
 
   <blockquote class="backdrop toc">
     <p class="toc-title">Lesson Map</p>
-    <%= render "shared/table_of_contents", sectionable: @lesson %>
+    <!-- <%= render "shared/table_of_contents", sectionable: @lesson %> -->
+    <div style="font-size:14px;line-height:22px;"><h3 style="display:inline;font-size:14px;text-transform:none;font-weight:bold;">Overview: </h3><a>Synopsis</a> > <a>Objective</a> > <a>Setup</a> > <a>Materials</a>  >  <a>Photocopies</a>  >  <a>Media</a></div>
+    <div style="font-size:14px;line-height:22px;"><h3 style="display:inline;font-size:14px;text-transform:none;font-weight:bold;">Lesson: </h3>1 <a>Inspiration</a> > 2 <a>Introduction</a> > 3 <a>Worktime</a> > 4 <a>Clean-up/Presentations</a></div>
+    <div style="font-size:14px;line-height:22px;"><h3 style="display:inline;font-size:14px;text-transform:none;font-weight:bold;">Extension: </h3><a>Anticipated Problems</a> > <a>Early Finishers</a></div>
   </blockquote>
 
 
