added check for markdown

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -116,7 +116,7 @@
     <%= f.text_field :early_finishers %>
   </div>
 
-  <%= render "shared/form_sections", form: f %>
+  <!-- <%= render "shared/form_sections", form: f %> -->
 
   <div class="actions">
     <%= f.submit %>
