--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -82,6 +82,16 @@
   </div>
 
   <div class="field">
+    <%= f.label :pre_work_heading %>
+    <%= f.text_field :pre_work_heading %>
+  </div>
+
+  <div class="field">
+    <%= f.label :pre_work %>
+    <%= f.text_field :pre_work %>
+  </div>
+
+  <div class="field">
     <%= f.label :inspiration_image_title %>
     <%= f.text_field :inspiration_image_title %>
    </div>
@@ -104,6 +114,11 @@
   <div class="field">
     <%= f.label :worktime %>
     <%= f.text_field :worktime %>
+  </div>
+
+  <div class="field">
+    <%= f.label :additional_worktime %>
+    <%= f.text_field :additional_worktime %>
   </div>
 
   <div class="field">
