added clean-up to lessons

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -122,6 +122,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :clean_up %>
+    <%= f.text_field :clean_up %>
+  </div>
+
+  <div class="field">
     <%= f.label :anticipated_problems %>
     <%= f.text_field :anticipated_problems %>
   </div>
