--- a/app/views/lessons/_new_lesson.html.erb
+++ b/app/views/lessons/_new_lesson.html.erb
@@ -166,6 +166,7 @@
             <li>A note on responses: it is o.k. if an audience member questions or wants clarification from the artist. It is also o.k. if an audience member makes suggestions. But it must be done in a kind, thoughtful, and respectful way.</li>
             <li>Always end the conversation by asking the class to give the artist a compliment.</li>
           </ul>
+          <p><%= @lesson.clean_up %></p>
       </div>
     </div>
   </div>
