allow for old-style synopsis

--- a/app/views/lessons/_markdown_lesson.html.erb
+++ b/app/views/lessons/_markdown_lesson.html.erb
@@ -10,7 +10,7 @@
         <%= image_tag @lesson.example_image.url(:medium) %>
       </div>
       <div class="superhero-quote">
-        <%= @lesson.synopsis %>
+        <%= @lesson.synopsis_old %>
       </div>
     </div>
   </div>
