--- a/app/views/lessons/_new_lesson.html.erb
+++ b/app/views/lessons/_new_lesson.html.erb
@@ -50,6 +50,20 @@
     <h2 id='materials' class="overview-heading">Materials</h2>
     <p><%= @lesson.materials %></p>
     <h2 id='photocopies' class="overview-heading">Photocopies</h2>
+    <p>
+      <% if @lesson.first_photocopy.present? %>
+      <p><%= link_to "Photocopy 1", @lesson.first_photocopy.url %></p>
+      <% else %>
+      <%= "N/A" %>
+      <% end %>
+      <% if @lesson.second_photocopy.present? %>
+      <p><%= link_to "Photocopy 2", @lesson.second_photocopy.url %></p>
+      <% end %>
+      <% if @lesson.third_photocopy.present? %>
+      <p><%= link_to "Photocopy 3", @lesson.third_photocopy.url %></p>
+      <% end %>
+
+    </p>
     <h2 id='media' class="overview-heading">Media</h2>
     <p><%= @lesson.media %></p>
   <hr />
