--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -93,6 +93,15 @@
     }
   }
 
+  h1.finished {
+      margin: 50px 0;
+      border-top: 0;
+  }
+
+  p.finished {
+      margin-bottom: 100px;
+  }
+
 }
 
 .collapsed {
