--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -45,3 +45,4 @@
     </div>
   </div>
 </div>
+<script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"28ca6056cf1fcbb59340d2de6","lid":"434752e97b"}) })</script>
