--- a/app/views/lessons/_new_lesson.html.erb
+++ b/app/views/lessons/_new_lesson.html.erb
@@ -31,14 +31,14 @@
 
   <hr />
   <div id="overview">
-    <h1 class="overview-head">Overview</h1>
-    <h2 id='objective' class="overview-heading">objective</h2>
+    <h1 class="overview-head anchor">Overview</h1>
+    <h2 id='objective' class="overview-heading anchor">objective</h2>
     <p><%= @lesson.objective %></p>
-    <h2 id='setup' class="overview-heading">Setup</h2>
+    <h2 id='setup' class="overview-heading anchor">Setup</h2>
     <p><%= @lesson.setting_up %></p>
-    <h2 id='materials' class="overview-heading">Materials</h2>
+    <h2 id='materials' class="overview-heading anchor">Materials</h2>
     <p><%= @lesson.materials %></p>
-    <h2 id='photocopies' class="overview-heading">Photocopies</h2>
+    <h2 id='photocopies' class="overview-heading anchor">Photocopies</h2>
     <p>
       <% if @lesson.first_photocopy.present? %>
       <p><%= link_to @lesson.first_photocopy_file_name, @lesson.first_photocopy.url %></p>
@@ -53,7 +53,7 @@
       <% end %>
 
     </p>
-    <h2 id='media' class="overview-heading">Media</h2>
+    <h2 id='media' class="overview-heading anchor">Media</h2>
     <p><%= @lesson.media %></p>
   <hr />
   </div>
@@ -64,7 +64,7 @@
     <% if @lesson.pre_work != nil && @lesson.pre_work != "" %>
       <a><div class='collapsible' id='pre-work'>
         <div class='collapsible-heading'>
-          <h2 class="lesson-heading">lesson pre-work</h2>
+          <h2 class="lesson-heading anchor">lesson pre-work</h2>
         </div>
         <div class='collapsible-plus'><h2>+</h2></div>
       </div></a>
@@ -75,7 +75,7 @@
     <% end %>
 
     <% if @lesson.inspiration_image.exists?  %>
-      <h2 id='inspiration' class="lesson-heading">10m, inspiration</h2>
+      <h2 id='inspiration' class="lesson-heading anchor">10m, inspiration</h2>
       <blockquote>
         <a data-toggle="modal" data-modal-id="modal-insp" class="modal-insp"><div class="insp-img-wrapper"><img src='<%= @lesson.inspiration_image.url(:large) %>' /><span class="glyphicon glyphicon-zoom-in"></span></div></a>
         <p id="inspiration-image-title"><%= @lesson.inspiration_image_title %></p>
@@ -97,7 +97,7 @@
       <p><i>The point of this discussion time is to have students learn and add onto each other’s thoughts. By remaining neutral and simply repeating what students say you allow students to do the heavy mental lifting and also create an environment where there is no wrong answer, fostering creativity and mental risk-taking.</i></p>
     </div>
     <% end %>
-  <h2 id='introduction' class="lesson-heading">5m, Introduction</h2>
+  <h2 id='introduction' class="lesson-heading anchor">5m, Introduction</h2>
   <div>
   <blockquote>
     <div class="frame frame--16x9">
@@ -119,7 +119,7 @@
       <p>Check for understanding by asking, “Who was listening closely that can sum up what we are doing today?” Make sure that student artists can list all the steps and clarify anything that needs clarifying.</p>
     </div>
     <div>
-      <a><div class='collapsible' id='worktime'>
+      <a><div class='collapsible anchor' id='worktime'>
         <div class='collapsible-heading'>
           <h2 class="lesson-heading">20-25m, worktime</h2>
         </div>
@@ -134,7 +134,7 @@
     <% end %>
 
     <% if @lesson.additional_worktime != nil && @lesson.additional_worktime != "" %>
-      <a><div class='collapsible' id='additional-worktime'>
+      <a><div class='collapsible anchor' id='additional-worktime'>
         <div class='collapsible-heading'>
           <h2 class="lesson-heading">additional worktime</h2>
         </div>
@@ -145,7 +145,7 @@
       </div>
     <% end %>
 
-    <a><div class='collapsible' id='clean-up-presentations'>
+    <a><div class='collapsible anchor' id='clean-up-presentations'>
       <div class='collapsible-heading'>
         <h2 class="lesson-heading">5-10m, clean-up/presentations</h2>
       </div>
@@ -173,16 +173,17 @@
 <div id="extension">
   <h1 class="extension-head">Extension</h1>
 
-  <a><div class='collapsible' id='anticipated-problems'>
-    <div class='collapsible-heading'>
-      <h2 class="extension-heading">anticipated problems</h2>
+    <a><div class='collapsible anchor' id='anticipated-problems'>
+      <div class='collapsible-heading'>
+        <h2 class="extension-heading">anticipated problems</h2>
+      </div>
+      <div class='collapsible-plus'><h2>+</h2></div>
+    </div></a>
+    <div class='anticipated-problems-collapsed collapsed' hidden>
+      <p><%= @lesson.anticipated_problems %></p>
     </div>
-    <div class='collapsible-plus'><h2>+</h2></div>
-  </div></a>
-  <div class='anticipated-problems-collapsed collapsed' hidden>
-    <p><%= @lesson.anticipated_problems %></p>
-  </div>
-  <a><div class='collapsible' id='early-finishers'>
+
+  <a><div class='collapsible anchor' id='early-finishers'>
     <div class='collapsible-heading'>
       <h2 id='early-finishers' class="extension-heading">early finishers</h2>
     </div>
