--- a/app/views/lessons/_new_lesson.html.erb
+++ b/app/views/lessons/_new_lesson.html.erb
@@ -59,9 +59,9 @@
     <h1 class="lesson-head heading">Lesson</h1>
 
     <% if @lesson.pre_work != nil && @lesson.pre_work != "" %>
-      <a><div class='collapsible' id='pre-work'>
+      <a><div class='collapsible anchor' id='pre-work'>
         <div class='collapsible-heading'>
-          <h2 class="lesson-heading anchor">lesson pre-work</h2>
+          <h2 class="lesson-heading">2m, pre-work</h2>
         </div>
         <div class='collapsible-plus'><h2>+</h2></div>
       </div></a>
