--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -1,4 +1,4 @@
-.lesson-wrapper {
+.lesson-wrapper, .project-wrapper {
 
   h1 {
     color: black;
@@ -153,4 +153,22 @@ a.modal-insp:hover {
     text-transform: none;
     font-weight: bold;
   }
+}
+
+.project-wrapper hr {
+  margin-top: 25px;
+  margin-bottom: -20px;
+}
+
+.project-wrapper h1 {
+  margin-bottom: 25px;
+}
+
+.project-wrapper b {
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+.project-wrapper .project-indent {
+  margin-left: 10px;
 }
