refined project overview

--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -58,6 +58,34 @@
   </div>
 
   <div class="field">
+    <%= f.label :photocopy %>
+    <%= f.text_field :photocopy %>
+  </div>
+
+  <%= render "shared/form_attachment",
+    form: f,
+    entity: @lesson,
+    attribute: :first_photocopy,
+    label: "Photocopy 1" %>
+
+  <%= render "shared/form_attachment",
+    form: f,
+    entity: @lesson,
+    attribute: :second_photocopy,
+    label: "Photocopy 2" %>
+
+  <%= render "shared/form_attachment",
+    form: f,
+    entity: @lesson,
+    attribute: :third_photocopy,
+    label: "Photocopy 3" %>
+
+  <div class="field">
+    <%= f.label :photocopy_copyright %>
+    <%= f.text_field :photocopy_copyright %>
+  </div>
+
+  <div class="field">
     <%= f.label :common_core %>
     <%= f.text_area :common_core, 'data-uk-htmleditor' => '{markdown:true}' %>
   </div>
